[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stackstorm_api_client"
version = "2.0.4"
authors = [
  { name="Jason Piszcyk", email="Jason.Piszcyk@gmail.com" },
]
description = "Simple client to access stackstorm API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests",
  "urllib3",
  "pytest",
]

[project.urls]
"Homepage" = "https://github.com/JasonPiszcyk/StackStormAPIClient"
"Bug Tracker" = "https://github.com/JasonPiszcyk/StackStormAPIClient/issues"
